알고리즘 문제해결 전략 03 코딩과 디버깅에 관하여 3.6. 실수자료형의 이해 - math 추가

--- a/_config.yml
+++ b/_config.yml
@@ -87,6 +87,10 @@ markdown: kramdown
 
 highlighter: rouge
 
+excerpt_separator: "\n\n"
+
+incremental: false
+
 kramdown:
   input: GFM
   syntax_highlighter: rouge
