--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -13,11 +13,31 @@ source "https://rubygems.org"
 # If you want to use GitHub Pages, remove the "gem "jekyll"" above and
 # uncomment the line below. To upgrade, run `bundle update github-pages`.
 # gem "github-pages", group: :jekyll_plugins
+
 gem "github-pages", "~> 209", group: :jekyll_plugins
 # If you have any plugins, put them here!
-group :jekyll_plugins do
-  gem "jekyll-feed", "~> 0.12"
-end
+# group :jekyll_plugins do
+#   gem "jekyll-feed", "~> 0.12"
+# end
+# classifier-reborn
+gem "classifier-reborn"
+# json
+gem "json"
+gem "jekyll"
+# jekyll-feed
+gem "jekyll-feed"
+# jekyll-gist
+gem "jekyll-gist"
+# jekyll-paginate 
+gem "jekyll-paginate"
+# jekyll-sitemap
+gem "jekyll-sitemap"
+# jekyll-include-cache
+gem 'jekyll-include-cache'
+# jemoji
+gem "jemoji"
+# theme: minimal-mistakes-jekyll
+gem "minimal-mistakes-jekyll", "4.13.0"
 
 # Windows and JRuby does not include zoneinfo files, so bundle the tzinfo-data gem
 # and associated library.
