--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -17,7 +17,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-locale                   : "ko-KR"
+locale: "ko-KR"
 title: Aimpugn's Dev Blog
 email: aimpugn@gmail.com
 # description: >- # this means to ignore newlines until "baseurl:"
@@ -31,18 +31,25 @@ github_username:  aimpugn
 # theme: jekyll-theme-minimal
 remote_theme : mmistakes/minimal-mistakes
 plugins:
+  - json
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-gist
   - jekyll-feed
+  - jemoji
+  - classifier-reborn
+  - jekyll-include-cache
 
-lsi: false
+lsi: true
 safe: true
-source: [/docs]
-incremental: false
-highlighter: rouge
-gist:
-  noscript: false
-kramdown:
-  math_engine: mathjax
-  syntax_highlighter: rouge
+# source: [/docs]
+# incremental: false
+# highlighter: rouge
+# gist:
+#   noscript: false
+# kramdown:
+#   math_engine: mathjax
+#   syntax_highlighter: rouge
 
 # Exclude from processing.
 # The following items will not be processed, by default.
