--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -33,7 +33,7 @@ gem "jekyll-paginate"
 # jekyll-sitemap
 gem "jekyll-sitemap"
 # jekyll-include-cache
-gem 'jekyll-include-cache'
+gem 'jekyll-include-cache', group: :jekyll_plugins
 # jemoji
 gem "jemoji"
 # theme: minimal-mistakes-jekyll
