--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -30,7 +30,7 @@ github_username:  aimpugn
 
 # Build settings
 # theme: jekyll-theme-minimal
-remote_theme : mmistakes/minimal-mistakes
+remote_theme : "mmistakes/minimal-mistakes@4.21.0"
 plugins:
   - classifier-reborn
   - json
@@ -41,16 +41,27 @@ plugins:
   - jekyll-sitemap
   - jemoji
 
-lsi: true
-safe: true
-source: [/docs]
-incremental: false
+encoding: "utf-8"
+markdown_ext: "markdown,mkdown,mkdn,mkd,md"
+
+# Conversion
+markdown: kramdown
 highlighter: rouge
-gist:
-  noscript: false
+lsi: false
+excerpt_separator: "\n\n"
+incremental: false
+
 kramdown:
   math_engine: mathjax
   syntax_highlighter: rouge
+  input: GFM
+  hard_wrap: false
+  auto_ids: true
+  footnote_nr: 1
+  entity_output: as_char
+  toc_levels: 1..6
+  smart_quotes: lsquo,rsquo,ldquo,rdquo
+  enable_coderay: false
 
 # Exclude from processing.
 # The following items will not be processed, by default.
@@ -72,3 +83,16 @@ exclude:
   - vendor/gems/
   - vendor/ruby/
 
+# Defaults
+defaults:
+  # _posts
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: # true
+      share: true
+      related: true
