page 관련 config 추가

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -111,6 +111,13 @@ incremental: false
   
 # Defaults
 defaults:
+  # _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
   # _posts
   - scope:
       path: ""
