--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -116,6 +116,10 @@ defaults:
     values:
       layout: single
       author_profile: true
+      read_time: true
+      comments: # true
+      share: true
+      related: true
   # _posts
   - scope:
       path: ""
