--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -130,6 +130,7 @@ defaults:
     values:
       layout: single
       classes: wide
+      permalink: /:path
       author_profile: true
       read_time: true
       comments: # true
