--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -106,6 +106,7 @@ exclude:
 
 encoding: "utf-8"
 markdown_ext: "markdown,mkdown,mkdn,mkd,md"
+math_engine: mathjax
 
 # Conversion
 markdown: kramdown
