--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -48,7 +48,10 @@ plugins:
   - jekyll-sitemap
   - jemoji
 
+  
+markdown: kramdown
 kramdown:
+  # math_engine: katex
   math_engine: mathjax
   syntax_highlighter: rouge
   input: GFM
@@ -60,6 +63,17 @@ kramdown:
   smart_quotes: lsquo,rsquo,ldquo,rdquo
   enable_coderay: false
 
+
+# JavaScript Head
+head_scripts:
+  - https://cdn.jsdelivr.net/npm/katex@0.10.2/dist/katex.min.js
+  - https://cdn.jsdelivr.net/npm/katex@0.10.2/dist/contrib/auto-render.min.js
+  - /assets/js/mathjax.js
+
+# pagination
+paginate: 10 # amount of posts to show
+paginate_path: /page:num/
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
@@ -68,7 +82,12 @@ kramdown:
 # Excluded items can be processed by explicitly listing the directories or
 # their entries' file path in the `include:` list.
 #
-include: [".htaccess", "_posts", "_pages"]
+include: [
+  ".htaccess", 
+  "_posts", 
+  "_pages", 
+  "_includes"
+]
 exclude:
   - .sass-cache/
   - .jekyll-cache/
@@ -106,10 +125,8 @@ exclude:
 
 encoding: "utf-8"
 markdown_ext: "markdown,mkdown,mkdn,mkd,md"
-math_engine: mathjax
 
 # Conversion
-markdown: kramdown
 highlighter: rouge
 lsi: false
 excerpt_separator: "\n\n"
