category_dir 추가 collabsible 내의 code 블록 수정

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -32,7 +32,7 @@ url: "https://aimpugn.github.io"
 # github
 github_username: aimpugn
 github: [metadata]
-
+category_dir: category/
 
 # theme
 # theme: "minimal-mistakes-jekyll"
