--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -51,8 +51,9 @@ plugins:
   
 markdown: kramdown
 kramdown:
-  # math_engine: katex
-  math_engine: mathjax
+  math_engine: katex
+  # math_engine: mathjax
+  parse_block_html: true
   syntax_highlighter: rouge
   input: GFM
   hard_wrap: false
