--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -32,6 +32,8 @@ gem "jekyll-gist"
 gem "jekyll-paginate"
 # jekyll-sitemap
 gem "jekyll-sitemap"
+# https://github.com/jeffreytse/jekyll-spaceship#installation
+gem "jekyll-spaceship"
 # jekyll-include-cache
 gem 'jekyll-include-cache', group: :jekyll_plugins
 # jemoji
